# keneyapp

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-test  .releaserc.json  .secrets.baseline  ANALYSIS.md  ANALYSIS_SUMMARY.md  ARCHITECTURE.md  AUDIT_COMPLET_NOVEMBRE_2025.md  AUTOMATION_GUIDE.md  BACKLOG.md  BUILD.md  BUILD_FIXES.md  CHANGELOG.md  CI_TESTING_LOCAL.md  CLEANUP_COMPLETE.txt  CLEANUP_QUICK_START.md  CODEBASE_ANALYSIS_ISSUES.md  CODEBASE_ISSUES_STRUCTURED.json  CODE_OF_CONDUCT.md  CODE_QUALITY_AUDIT.md  CONTRIBUTING.md  DEPENDENCY_UPDATES.md  DOCKER_OPTIMIZATION_RESULTS.md  DOCKER_OPTIMIZATION_SUMMARY.md  Dockerfile  Dockerfile.ci  Dockerfile.dev  Dockerfile.e2e  Dockerfile.frontend  Dockerfile.prod  E2E_SETUP_GUIDE.md  ENHANCEMENT_SUMMARY_v3.1.md  FINALIZATION_SUMMARY.md  GOVERNANCE.md  IMPLEMENTATION_COMPLETE.md  (+64 more)
.github/: CI_GUIDE.md  CODEOWNERS  README.md  SECURITY_CONTACTS.md  WORKFLOWS_OPTIMIZED.md  ai-commit-checklist.md  copilot-instructions.md  dependabot.yml  labels.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance.md
alembic/: env.py
app/: __init__.py  exceptions.py  main.py  tasks.py
docs/: API.md  API_BEST_PRACTICES.md  API_REFERENCE.md  API_REFERENCE_appointments.md  API_REFERENCE_batch.md  API_REFERENCE_status.md  API_STANDARDS.md  APP_EXCELLENCE_ANALYSIS.md  ARCHITECTURAL_IMPROVEMENTS.md  CI_CD_WORKFLOWS.md  CLEANUP_TODO.md  CODEBASE_OVERVIEW.md  CODE_COMPLEXITY_IMPROVEMENTS.md  CODE_QUALITY.md  CODING_STANDARDS.md  COMMUNITY.md  CONTINUOUS_IMPROVEMENT.md  CONTRIBUTING_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGIES.md  DEVELOPMENT.md  DISASTER_RECOVERY.md  DMI_ARCHITECTURE_ALIGNMENT.md  E2E_SETUP_GUIDE.md  E2E_TESTING.md  E2E_TESTING_ARCHITECTURE.md  E2E_TESTING_QUICK_REF.md  E2E_TEST_METHODOLOGY.md  E2E_TEST_SCENARIOS.md  ENCRYPTION_GUIDE.md  ENHANCEMENT_GUIDE.md  FHIR_GUIDE.md  FRENCH_HEALTHCARE_IMPLEMENTATION.md  FRENCH_HEALTHCARE_INTEGRATION.md  FRONTEND_ENHANCEMENTS_v3.1.md  GITHUB_ACTIONS_CONFIG.md  INCIDENT_RESPONSE.md  INDICATIVE_PLANNING.md  INTEGRATION_PLAN.md  MAINTENANCE_PLAN.md  (+37 more)
e2e/: auth.spec.ts  patients.spec.ts  v3-features.spec.ts
frontend/: .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-simple/: index.html
k8s/: README.md  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml  secret.yaml
logs/: e2e_integration_results.json
monitoring/: alert-rules.yml  grafana-business-kpi-dashboard.json  grafana-dashboard.json  prometheus.yml
scripts/: DOCKER_SCRIPTS_README.md  E2E_TESTING_README.md  analyze_e2e_results.py  build.sh  check_image_sizes.py  check_image_sizes.sh  deploy.sh  fix_vscode_errors.sh  format_all.ps1  format_all.sh  generate_db_docs.py  healthcheck.ps1  import_icd11_from_tmp.py  init_db.py  install_hooks.sh  lint_all.ps1  lint_all.sh  monitor.ps1  rebuild_stack.sh  run-local-ci.sh  run_all_tests.sh  run_e2e_quick.sh  run_e2e_tests.sh  run_full_e2e_tests.py  seed_demo_appointments.py  seed_test_data.py  setup-branch-protection.sh  setup_dev_env.sh  setup_pre_commit.ps1  setup_pre_commit.sh  setup_pre_commit_quick.ps1  start.sh  start_stack.sh  test_all_apis.py  validate_env.sh  validate_frontend_backend.py
terraform/: README.md
tests/: __init__.py  conftest.py  test_advanced_search.py  test_analytics.py  test_analytics_enhanced.py  test_api.py  test_api_contracts.py  test_appointments.py  test_appointments_router.py  test_audit.py  test_auth.py  test_auth_edges.py  test_base_service.py  test_cache_service.py  test_common_schemas.py  test_comprehensive_v3.py  test_config_production.py  test_core_errors.py  test_correlation_id.py  test_dependencies.py  test_documents.py  test_documents_comprehensive.py  test_e2e_integration.py  test_encryption.py  test_fhir.py  test_fhir_bundle_transaction.py  test_fhir_dmi_extensions.py  test_fhir_terminology.py  test_fhir_utils.py  test_graphql.py  test_lab.py  test_logging_middleware.py  test_main_basic.py  test_medical_code_schemas.py  test_medical_terminology.py  test_messages.py  test_messages_comprehensive.py  test_messages_comprehensive.py.bak  test_messages_comprehensive.py.bak2  test_messages_comprehensive.py.bak3  (+19 more)
uploads/: .gitkeep  README.md
(+287 files in other folders)
