[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keneyapp"
version = "3.0.0"
description = "Modern healthcare data management platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Issa Sanogo", email = "ngsanogo@prooton.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115.6",
    "starlette>=0.47.2",  # Security fix for GHSA-2c2j-9gv5-cj73
    "uvicorn[standard]>=0.32.1",
    "python-multipart>=0.0.18",
    "sqlalchemy>=2.0.35",
    "alembic>=1.16.5",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.2",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "email-validator>=2.3.0",
    "redis>=7.0.1",
    "celery>=5.5.3",
    "flower>=2.0.1",
    "slowapi>=0.1.9",
    "prometheus-client>=0.23.1",
    "cryptography>=44.0.1",
    "pyotp>=2.9.0",
    "certifi>=2024.7.4",
    "jinja2>=3.1.4",
    "idna>=3.7",
    "urllib3>=2.2.3",
    "requests>=2.32.0",
    "werkzeug>=3.1.3",
    "configobj>=5.0.9",
    "authlib>=1.6.5",
    "itsdangerous>=2.2.0",
    "strawberry-graphql[fastapi]>=0.284.1",
    "fhir.resources>=7.1.0",
    "pycryptodome>=3.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "jsonschema>=4.23.0",
    "pre-commit>=3.0.0",
    "pip-audit>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/ngsanogo/keneyapp"
Documentation = "https://github.com/ngsanogo/keneyapp/tree/main/docs"
Repository = "https://github.com/ngsanogo/keneyapp"
Issues = "https://github.com/ngsanogo/keneyapp/issues"

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
  | alembic
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "smoke: marks tests as smoke tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "app.models.*",
    "app.routers.*",
    "app.graphql.*",
]
ignore_errors = false

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
